--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <script src="js/jquery-2.1.4.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
 <script src="js/Cubexy.js"></script>
+<script src="js/html2canvas.min.js"></script>
 <link href="css/bootstrap.min.css" rel="stylesheet" />
 <link href="css/style.css" rel="stylesheet" />
     
@@ -89,8 +90,7 @@
   </script>
 </body>
 <footer>
-    <a href="https://www.iconfinder.com/iconsets/gundam-flat" target="_blank">Gundam icon set by Vectto</a><br><br>
-    <a href="https://github.com/oscaruhp/CubexyJSAvatarGenerator" target="_blank">Cubexy JS by Develoteca</a>
+    <a href="https://github.com/auxdesigner/gundam-avatar" target="_blank">Github repo</a>
 
 </footer>
 </html>
